@@ -10,7 +10,7 @@
 	<integer>5</integer>
 	<key>IBOpenObjects</key>
 	<array>
-		<integer>6</integer>
+		<integer>7</integer>
 	</array>
 	<key>IBSystem Version</key>
 	<string>9B18</string>
